<resources>
    <string name="app_name">GitUser</string>
    <string name="username">username</string>
    <string name="user_name">Name</string>
    <string name="logo">Logo</string>
    <string name="information">Information</string>
    <string name="share">Share</string>
    <string name="data_following">data_following</string>
    <string name="following">Following</string>
    <string name="data_follower">data_follower</string>
    <string name="follower">Follower</string>
    <string name="data_repository">data_repository</string>
    <string name="repository">Repository</string>
    <string name="data_location">data_location</string>
    <string name="location">Location</string>
    <string name="data_company">data_company</string>
    <string name="company">Company</string>
    <string name="search">Search</string>
    <string name="search_hint">Type Username</string>
    <string name="detail_user">Detail User</string>
    <string name="dark_mode">Dark</string>
    <string name="favorite">Favorite</string>
    <string name="title_base">Base</string>
</resources>