<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/whMatch"
        tools:context=".ui.main.detail.DetailActivity">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignWithParentIfMissing="false"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.096"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints,ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_item_username"
            style="@style/whWrap"
            android:layout_below="@id/tv_item_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:text="@string/username"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_item_name"
            app:layout_constraintTop_toBottomOf="@id/tv_item_name"
            tools:text="@string/username" />

        <TextView
            android:id="@+id/tv_item_name"
            style="@style/whWrap"
            android:layout_below="@id/profile"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:text="@string/user_name"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.047"
            app:layout_constraintStart_toEndOf="@+id/profile"
            app:layout_constraintTop_toTopOf="@+id/profile"
            tools:text="@string/user_name" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            style="@style/whWrap"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="171dp" />

        <include
            android:id="@+id/include"
            layout="@layout/layout_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline2"
            app:layout_constraintVertical_bias="0.067" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <!--        <Button-->
        <!--            style="@style/Btn"-->
        <!--            android:id="@+id/btn_fav"-->
        <!--            android:text="@string/favorite"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/btn_share" />-->
        <!--        <Button-->
        <!--            style="@style/Btn"-->
        <!--            android:id="@+id/btn_follow"-->
        <!--            android:text="@string/follow"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/btn_fav" />-->

        <Button
            android:id="@+id/btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            app:layout_constraintBottom_toBottomOf="@+id/profile"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_username"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_item_username"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_username"
            app:layout_constraintVertical_bias="1.0" />

        <!--        <Button-->
        <!--            android:id="@+id/btn_fav"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginStart="12dp"-->
        <!--            android:text="@string/favorite"-->
        <!--            android:visibility="invisible"-->
        <!--            app:layout_constraintBottom_toBottomOf="@+id/btn_share"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintHorizontal_bias="0.0"-->
        <!--            app:layout_constraintStart_toEndOf="@+id/btn_share"-->
        <!--            app:layout_constraintTop_toTopOf="@+id/btn_share"-->
        <!--            app:layout_constraintVertical_bias="0.0" />-->

        <ImageButton
            android:id="@+id/btnFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/black"
            android:contentDescription="@string/favorite"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_share"
            app:layout_constraintStart_toEndOf="@+id/btn_share"
            app:layout_constraintTop_toTopOf="@+id/btn_share"
            app:srcCompat="@drawable/ic_fav_filled" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/include"
            tools:tabIndicatorColor="@color/red"
            tools:tabTextColor="@android:color/white">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/follower" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabs"
            app:layout_constraintVertical_bias="1.0" />



    </androidx.constraintlayout.widget.ConstraintLayout>
